# pythusa

./: .gitignore  AGENTS.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  test.yml
benchmarks/: README.md  _reporting.py  compare_fft_benchmarks.py  dsp_benchmark_suite.py  fft_pipeline_joblib.py  fft_pipeline_pythusa.py  numba_candidate_benchmark.py  rocketdata_test.py
docs/: benchmarks.md  demos.md  index.md  internals.md  pipeline.md  runtime.md
engine_data/: ecu_vtf5.csv  gse-vtf-5.csv
examples/: basic_workers.py  compare_fft_benchmarks.py  engine_dsp_pipeline.py  fir128_scaling_pipeline.py  numpy_fft_pipeline.py  rfft_benchmark_like.py  rfft_scaling_pipeline.py
examples/fft_pipeline_demo/: README.md  graphing.py  main.py
examples/stock_quant_demo/: README.md  data.py  graphing.py  main.py
pkg_tests/: run_smoke_test.ps1  smoke_test.py
pkg_tests/.testpypi-venv/: pyvenv.cfg
pkg_tests/.testpypi-venv/Scripts/: activate  activate.bat
site/: 404.html  index.html  sitemap.xml
site/pipeline/: index.html
site/runtime/: index.html
site/search/: search_index.json
src/pythusa/: __init__.py  pipeline_api_outline.py  typing.py
src/pythusa/_buffers/: __init__.py  ring.py
src/pythusa/_core/: __init__.py  context.py
tests/: test_benchmark_helpers.py  test_bootstrap_basic.py  test_dsp_kernels.py  test_manager_basic.py  test_pipeline_compile.py  test_pipeline_runtime.py  test_ring_buffer_basic.py  test_ring_buffer_case_matrix.py  test_ring_buffer_contract.py  test_ring_buffer_edge_cases.py  test_stock_quant_demo_simulation.py  test_sync_events.py  test_worker_basic.py
(+14 files in other folders)
