[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythusa"
version = "0.1.3"
description = "Python-first shared-memory DSP pipelines with zero-copy transport and runtime orchestration."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
authors = [
  {name = "PYTHUSA Contributors"},
]
keywords = ["ipc", "shared-memory", "multiprocessing", "numpy", "ring-buffer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "numpy",
  "psutil",
]

[project.urls]
Homepage = "https://github.com/daciwolf/pythusa"
Documentation = "https://daciwolf.github.io/pythusa/"
Repository = "https://github.com/daciwolf/pythusa"
Issues = "https://github.com/daciwolf/pythusa/issues"

[project.optional-dependencies]
test = ["pytest>=8"]
examples = ["joblib>=1.4", "matplotlib>=3.8"]
benchmarks = ["joblib>=1.4", "matplotlib>=3.8", "numba>=0.61"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pythusa*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
